took away checkbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,14 @@ nav {
     display: block;
 }
 
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
+}
+
 #menu {
     list-style-type: none;
     letter-spacing: 2px;
