--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,6 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    /* Generic project styles */
-    color: #3a3a3a;
-    font-family: 'Lato', sans-serif;
 }
 
 /* Header */
@@ -93,6 +90,7 @@ nav {
 }
 
 #menu {
+
     list-style-type: none;
     letter-spacing: 2px;
     text-transform: capitalize;
@@ -121,7 +119,7 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
-    margin-top: 51px;
+    margin-top: 42px;
     text-align: center;
 }
 
@@ -134,12 +132,71 @@ main {
     position: relative;
 }
 
+#hero > h2, .comment-section > h2 {
+    text-decoration: underline;
+    font-size: 50px;
+}
+
 #cover-text {
     margin-top: 10px;
     padding: auto;
     padding-top: 20px;
     padding-left: 10px;
 
+}
+
+/* Basic styling for the comment section */
+.comment-section {
+    width: 80%;
+    margin: auto;
+    padding: 20px;
+}
+
+.comment-section > h2 {
+    margin-left: 1px;
+    margin-right: 1px;
+    margin-bottom: 5px;
+}
+
+
+.comment-list {
+    border-top: 1px solid #ccc;
+    padding-top: 5px;
+    margin-top: 5px;
+    font-family: "Great vibes", solid, sans-serif ;
+    font-size: 150%;
+}
+
+.comment {
+    border: 1opx solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: rgba(255,255,255,0.65);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* Comment form styling */
+
+#comment-form {
+    margin-top: 1px;
+}
+
+#comment-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: vertical;
+}
+
+button {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 
