--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ main {
 
 }
 
-/* Basic styling for the comment section */
+/* Comment section */
 .comment-section {
     width: 80%;
     margin: auto;
