--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,23 +48,30 @@ header a {
 
 }
 
+/*Edited h1*/
 h1 {
-    font-family: "Great vibes", cursive, sans-serif ;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 10px;
-    color: black; /* Set the font color to black */
-    text-shadow: 2px 2px 0 white, -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white; /* Create a white outline */
+
+    font-family: "Great vibes", cursive, sans-serif;
+    font-size: 40px;
+    color: rgb(255, 193, 202);
+    text-shadow: 1.2px 1.2px 0 rgb(0, 0, 0), 1.2px -1.2px 0 black;
+    font-weight: 100;
+
+
 }
 
 h2 {
     font-family: "Great vibes", cursive, sans-serif ;
     font-size: 40px;
-    color: black;
-        /* Set the font color to black */
-    text-shadow: 2px 2px 0 white, -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white;
-        /* Create a white outline */
+    color: rgb(255, 193, 202);
+    text-shadow: 1.2px 1.2px 0 rgb(0, 0, 0), 1.2px -1.2px 0 black;
+    font-weight: 100;
+    
+
 }
+
+
+
 
 /*The navigation menu*/
 nav {
@@ -132,19 +139,16 @@ main {
 
 /* Hero Index, Feedback*/
 #hero {
-    height: 600px;
+    height: 100vh;
     width: 100%;
-    background: url("../images/hero-image-mshd.webp") no-repeat center center/cover;
+    background: url("../images/hero-image-mshd.webp") no-repeat right center/cover;
     position: relative;
 }
 
-#hero-shop {
-    background-color: #fafafa;
-}
+
 
 #hero > h2, .comment-section > h2 {
     font-size: 50px;
-    color: black;
 }
 
 #cover-text {
@@ -155,13 +159,21 @@ main {
 
 }
 
+#cover-text-test {
+    margin-top: 10px;
+    padding: auto;
+    padding-top: 200px;
+    padding-left: 10px;
+
+}
+
 /*Hero shop*/
 #hero-shop {
     height: 200px;
     width: 100%;
     background: url("../images/Hero-logo-shop-2.png") no-repeat center center/cover;
     position: relative;
-
+    background-color: #fafafa;
 }
 
 #cover-text-shop {
