--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ header a {
 }
 
 /*Edited h1*/
-h1 {
+h1, h2, .feedback-text{
 
     font-family: "Great vibes", cursive, sans-serif;
     font-size: 40px;
@@ -59,19 +59,6 @@ h1 {
 
 
 }
-
-h2 {
-    font-family: "Great vibes", cursive, sans-serif ;
-    font-size: 40px;
-    color: rgb(255, 193, 202);
-    text-shadow: 1.2px 1.2px 0 rgb(0, 0, 0), 1.2px -1.2px 0 black;
-    font-weight: 100;
-    
-
-}
-
-
-
 
 /*The navigation menu*/
 nav {
@@ -192,27 +179,33 @@ main {
 
 
 /* Review/Feedback section */
-
 #review {
     display: flex;
     flex-direction: column;
 }
 
 .feedback-section {
-    position: relative;
-    margin: 20px auto;
-    padding: 20px;
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    width: 100%;
+    margin: auto;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .feedback-section>h2 {
-    margin: 0;
-    margin-bottom: 10px;
+    margin-left: 1px;
+    margin-right: 1px;
+    margin-bottom: 5px;
+}
+
+.feedback-text {
     font-family: "Great vibes", cursive, sans-serif;
-    font-size: 1.5rem;
+    font-size: 40px;
+    color: rgb(255, 193, 202);
+    text-shadow: 1.2px 1.2px 0 rgb(0, 0, 0), 1.2px -1.2px 0 black;
+    font-weight: 100;
 }
 
 /* Comment form styling */
