--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,12 +122,10 @@ main {
 /* Hero Index, Feedback*/
 #hero {
 
-    height: 100vh;
+    height: 500px;
     width: 100%;
     background: url("../images/hero-image-mshd.webp") no-repeat center center/cover;
     position: relative;
-    justify-content: center;
-    display: flex;
 
 }
 
@@ -137,21 +135,27 @@ main {
 }
 
 #info-text {
-    margin-top: 10px;
-    padding: auto;
-    padding-left: 20px;
-    background-color: rgba(220, 204, 204, 0.6);
-
-}
-
-#info {
-    margin-top: 10px;
-    padding: auto;
-    padding-top: 200px;
+    font-size: 110%;
+    padding-top: 20px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: rgba(226, 64, 64, 0.6);
+    position: absolute;
+    bottom: 20px;
+    min-height: 200px;
+    width: 85%;
+    border-radius: 10px;
+
 
 }
+
+#info-text > p {
+    color: #fafafa;
+}
+
 
 /*Hero shop*/
 
@@ -370,9 +374,21 @@ button {
         height: 100vh;
         width: 100%;
         background: url("../images/Hero-large.jpg") no-repeat center center/cover;
-        position: relative;
-        justify-content: center;
-        display: flex;
+        position: relative
+    }
+
+    #info-text {
+        width: 300px;
+        right: 30px;
+
+    }
+
+
+
+    h1, h2, .feedback-text {
+        font-family: "Great vibes", cursive, sans-serif; font-size: 40px;
+        color: rgb(255, 255, 255);
+        text-shadow: 1.2px 1.2px 0 rgb(0, 0, 0), 1.2px -1.2px 0 rgb(0, 0, 0);
     }
 
 
