--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ main {
     background-color: #fafafa;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
-    margin-top: 42px;
+    margin-top: 64px;
     text-align: center;
 }
 
@@ -134,6 +134,11 @@ main {
     font-size: 50px;
 }
 
+#info-text > h1, #info-text > p {
+    color: rgb(255 210 217);
+    text-shadow: none;
+}
+
 #info-text {
     font-size: 110%;
     padding-top: 20px;
@@ -148,12 +153,6 @@ main {
     min-height: 200px;
     width: 85%;
     border-radius: 10px;
-
-
-}
-
-#info-text > p {
-    color: #fafafa;
 }
 
 
@@ -183,9 +182,8 @@ main {
 
 /* Review/Feedback section */
 #review {
-    display: flex;
-    flex-direction: column;
-    margin-top: 60px;
+    position: absolute;
+    padding-top: 10px;
 }
 
 .feedback-section {
@@ -365,7 +363,7 @@ button {
     /* Main content */
     main {
         /* Push main content down to accommodate larger header */
-        margin-top: 51px;
+        margin-top: 66px;
     }
 
 
@@ -387,7 +385,7 @@ button {
 
     h1, h2, .feedback-text {
         font-family: "Great vibes", cursive, sans-serif; font-size: 40px;
-        color: rgb(255, 255, 255);
+        color: rgb(255 210 217);
         text-shadow: 1.2px 1.2px 0 rgb(0, 0, 0), 1.2px -1.2px 0 rgb(0, 0, 0);
     }
 
