--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,8 @@ main {
     font-size: 50px;
 }
 
-#info-text > h1, #info-text > p {
+#info-text>h1,
+#info-text>p {
     color: rgb(255 210 217);
     text-shadow: none;
 }
@@ -155,13 +156,57 @@ main {
     border-radius: 10px;
 }
 
+#events {
+    border-top: #3a3a3a;
+}
+
 /*Images in index*/
+
+#circle-student {
+    background: url('../images/sdtudent-party.jpg') no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    border: rgba(220, 204, 204, 0.6) solid 1px;
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#circle-wedding {
+    background: url('../images/wedding.jpg') no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    border: rgba(220, 204, 204, 0.6) solid 1px;
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#circle-after-work {
+    background: url('../images/after-work.jpg') no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    border: rgba(220, 204, 204, 0.6) solid 1px;
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+.index-image {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 img {
     max-width: 100%;
 }
 
-/*Hero shop*/
+/*Hero for the shop*/
 
 #hero-shop {
     height: 200px;
@@ -181,8 +226,6 @@ img {
     padding: 10px;
     transform: translate(-50%, -50%);
 }
-
-
 
 
 /* Review/Feedback section */
@@ -281,7 +324,8 @@ button {
 /* Images for the shop*/
 
 #salmon-mousse {
-    background-image: url("../images/Salmon-mousse.jpg");
+    
+    background: url("../images/border-ms.png");
     background-size: cover;
     background-position: left;
     background-repeat: no-repeat;
@@ -291,37 +335,13 @@ button {
     background-position: left center;
 }
 
-#salmon-roll-blini {
-    background-image: url("../images/Salmon-roll-blini.jpg");
-    background-size: cover;
-    background-position: left;
-    background-repeat: no-repeat;
-    background-color: #fafafa;
-}
+#salmon-roll-blini {}
 
-#duck-liver-mousse {
-    background-image: url("../images/Duck-liver-mousse.jpg");
-    background-size: cover;
-    background-position: left;
-    background-repeat: no-repeat;
-    background-color: #fafafa;
-}
+#duck-liver-mousse {}
 
-#goatscheese-filobasket {
-    background-image: url("../images/Filo-goats-cheese.jpg");
-    background-size: cover;
-    background-position: left;
-    background-repeat: no-repeat;
-    background-color: #fafafa;
-}
+#goatscheese-filobasket {}
 
-#white-chocolate-mousse {
-    background-image: url("../images/Lactos-free-white-mousse.jpg");
-    background-size: cover;
-    background-position: left;
-    background-repeat: no-repeat;
-    background-color: #fafafa;
-}
+#white-chocolate-mousse {}
 
 /* Thank you page*/
 
@@ -396,8 +416,11 @@ button {
 
 
 
-    h1, h2, .feedback-text {
-        font-family: "Great vibes", cursive, sans-serif; font-size: 40px;
+    h1,
+    h2,
+    .feedback-text {
+        font-family: "Great vibes", cursive, sans-serif;
+        font-size: 40px;
         color: rgb(255 210 217);
         text-shadow: 1.2px 1.2px 0 rgb(0, 0, 0), 1.2px -1.2px 0 rgb(0, 0, 0);
     }
