--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,13 +152,27 @@ main {
 
 /*Index*/
 
+#title {
+    padding-top: 20px;
+}
+
+#title > h3 {
+   
+    margin-bottom: 0;
+    background-color: rgba(255, 255, 255, 0.85);
+    font-size: 300%;
+}
+
+#title > p {
+    margin-top: 0;
+    background-color: rgba(255, 255, 255, 0.85);
+}
+
 #hero > h2,
 .feedback-section > h2 {
     font-size: 50px;
 ;
 }
-
-/*Index*/
 
 #hero > h2,
 .feedback-section > h2 {
@@ -460,6 +474,13 @@ button {
     
     /*index text*/
 
+    #title > h3 {
+        font-size: 110px;
+    }
+    #title>p {
+        font-size: 40px;
+    }
+
     #events {
         text-align: left;
         padding-left: 20px;
@@ -469,8 +490,9 @@ button {
     }
 
     #info-text {
-        width: 300px;
-        right: 30px;        
+        width: 20rem;
+        right: 30px;
+        bottom: 30px;        
     }
 
     .event-left {
